--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+a, a:visited {
+	text-decoration: none;
+	color: #000;
+}
+
+a:hover, a:focus {
+	color: #F00;
+}
+
 body {
 	margin: 0;
 }
@@ -60,4 +69,31 @@ ul.niv_2 li a:hover,
 ul.niv_2 li a:focus {
 	background-color:#000;
 	color: #FFF;
+}
+
+
+/* FOOTER */
+footer {
+	box-shadow: 0px 1px 11px rgba(0,0,0,0.4);
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 20px;
+	padding: 20px 100px 20px 100px;
+}
+
+footer .right {
+	position: absolute;
+	top: 0;
+	right: 300px;
+}
+
+ul.footer_links {
+	list-style-type: none;
+}
+
+ul.footer_links li {
+	display: inline-block;
+	padding: 4px 8px;
 }
