--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ a:hover, a:focus {
 
 body {
 	margin: 0;
+	font-family: 'Open Sans', sans-serif;
 }
 
 /* HEADER */
@@ -34,9 +35,8 @@ section.header_title h1 {
 	margin: 0;
 	font-size: 40px;
 	text-align: center;
-	padding: 110px 0;
+	padding: 100px 0;
 	text-transform: uppercase;
-	/*text-shadow: rgba(250, 250, 250, 0.4) 0px 1px 9px;*/
 	color: #FFF;
 }
 
