--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 a, a:visited {
 	text-decoration: none;
 	color: #000;
+	transition: all 0.4s ease;
 }
 
 a:hover, a:focus {
-	color: #F00;
+	color: #AE831D;
 }
 
 body {
@@ -66,7 +67,7 @@ ul.niv_1 > li {
 }
 
 ul.niv_1 li a:hover, ul.niv_1 li a:focus {
-	color: #F00;
+	color: #AE831D;
 }
 
 ul.niv_1 > li:hover ul.niv_2 {
@@ -135,7 +136,7 @@ ul.footer_links li {
 	left: 100px;
 }
 
-.mid_block article {
+.mid_block a {
 	width: 250px;
 	height: 250px;
 	margin-bottom: 20px;
@@ -145,29 +146,61 @@ ul.footer_links li {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-}
-
-.mid_block article div {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	background-color: #FFf;
-	width: 100%;
-	padding: 5px 10px;
-}
-
-.mid_block article div span {
 	display: block;
 }
 
-.mid_block article div span.title {
+.mid_block a div {
+	position: absolute;
+	bottom: -210px;
+	left: 0;
+	background-color: #FFf;
+	width: 100%;
+	height: 250px;
+	padding: 5px 10px;
+	transition: all 0.4s ease;
+}
+
+.mid_block a:hover
+.mid_block a:focus {
+	/*color: #000;*/
+}
+
+.mid_block a:hover div,
+.mid_block a:focus div {
+	/*padding: inherit;*/
+	bottom: 0;
+	right: 0;
+	left: 0;
+	width: auto;
+	background-color: rgba(250, 250, 250, 0.8);
+	/*color: #000;*/
+}
+
+.mid_block a:hover div span,
+.mid_block a:focus div span {
+	/*text-align: center;*/
+	/*color: #000;*/
+}
+
+.mid_block a:hover div span.title,
+.mid_block a:focus div span.title {
+	padding-top: 20px;
+}
+
+.mid_block a div span {
+	display: block;
+	transition: all 0.4s ease;
+}
+
+.mid_block a div span.title {
 	text-transform: uppercase;
 	font-weight: 700;
 }
 
-.mid_block article div span.date {
+.mid_block a div span.date {
 	font-size: 11px;
 	font-style: italic;
+	padding-bottom: 5px;
 }
 
 .mid_block section {
