ajout du titre pour le staff

--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ ul.footer_links li {
 }
 
 .citation {
-	margin: 80px 0;
+	margin: 80px 0 20px 0;
 	font-size: 48px;
 	padding: 20px 40px 20px 70px;
 	text-align: center;
