--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 header {
 	text-align: center;
 	padding-top: 20px;
+	position: relative;
 }
 
 div.logo img {
@@ -40,6 +41,31 @@ section.header_title h1 {
 	text-transform: uppercase;
 	color: #FFF;
 }
+
+ul.rs {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	position: absolute;
+	top: 48px;
+	right: 100px;
+}
+
+ul.rs li {
+	display: inline-block;
+	margin: 0 10px;
+}
+
+ul.rs li a,
+ul.rs li a:visited {
+	font-size: 28px;
+}
+
+ul.rs li a:hover,
+ul.rs li a:focus {
+	color: #AE831D;
+}
+
 
 /* MENU */
 nav {
@@ -156,8 +182,8 @@ ul.footer_links li {
 	position: absolute;
 	bottom: -210px;
 	left: 0;
+	right: 0;
 	background-color: #FFf;
-	width: 100%;
 	height: 250px;
 	padding: 5px 10px;
 	transition: all 0.4s ease;
@@ -166,9 +192,6 @@ ul.footer_links li {
 .mid_block a:hover div,
 .mid_block a:focus div {
 	bottom: 0;
-	right: 0;
-	left: 0;
-	width: auto;
 	background-color: rgba(250, 250, 250, 0.8);
 }
 
@@ -194,7 +217,6 @@ ul.footer_links li {
 }
 
 .mid_block section {
-	/*background-color: red;*/
 	padding: 10px 20px;
 }
 
@@ -275,4 +297,14 @@ h2.slider_title:after {
 	background-color: #AE831D;
 	width: 75px;
 	height: 2px;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	color: #AE831D;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+	color: #FFF;
 }
