--- a/style.css
+++ b/style.css
@@ -31,6 +31,25 @@ section.header_title {
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+}
+
+.keyframe_anim {
+	width: 400px;
+	height: 400px;
+	/*background-color: #AE831D;*/
+	position: absolute;
+	/*top: -100px;
+	left: -300px;*/
+	top: 20px;
+	left: -400px;
+	/*transform: rotate(20deg);*/
+	animation: 10s linear 1s custom_slide;
+	background-image: url('assets/images/licorne.gif');
+	background-repeat: no-repeat;
+	/*background-size: cover;*/
+	background-position: center;
 }
 
 section.header_title h1 {
@@ -308,3 +327,22 @@ h2.slider_title:after {
 .swiper-button-next:hover {
 	color: #FFF;
 }
+
+/* KEYFRAME */
+@keyframes custom_slide {
+  0% {left: -300px;}
+  /*50% {left: calc(100% + 100px);}*/
+  /*100% {left: -300px;}*/
+  100% {left: 100%;}
+  /*50% {left: 100%;}
+  100% {left: -300px;}*/
+}
+
+
+
+
+
+
+
+
+
