--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ section.header_title {
 	position: absolute;
 	top: 20px;
 	left: -400px;
-	animation: 10s linear 1s custom_slide;
+	animation: 10s infinite linear 1s custom_slide;
 	background-image: url('assets/images/licorne.gif');
 	background-repeat: no-repeat;
 	background-position: center;
@@ -122,6 +122,7 @@ ul.niv_2 {
 	background-color: #FFF;
 	padding-left: 0;
 	box-shadow: 0px 13px 11px rgba(0,0,0,0.4);
+	z-index: 100000;
 }
 
 ul.niv_2 li a,
@@ -328,3 +329,27 @@ h2.slider_title:after {
   0% {left: -300px;}
   100% {left: 100%;}
 }
+
+
+@media only screen and (max-width: 768px) {
+	ul.rs {
+		right: 50px;
+	}
+}
+
+@media only screen and (max-width: 628px) {
+	ul.rs {
+		position: inherit;
+		top: inherit;
+		right: inherit;
+	}
+}
+
+
+
+
+
+
+
+
+
